...
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_margin="@dimen/text_margin"
                    android:paddingLeft="@dimen/cardview_default_radius"
                    android:id="@+id/btn_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/white"
                    android:gravity="left|center"
                    android:text="Recipe Ingredients"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceListItem" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
...
