...
            <!--android:fitsSystemWindows="true"-->
            <!--app:contentScrim="?attr/colorPrimary"-->
            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
            <!--app:toolbarId="@+id/toolbar">-->

          <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

       <!-- </android.support.design.widget.CollapsingToolbarLayout>&ndash;&gt;-->

...
